bugfix: invisible-link_at_session-page
- Fixed CSS which causes the bug where the link on the application-item in the session page is invisible

- Cleaned up duplicate CSS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -259,6 +259,10 @@ button {
   max-height: 100px;
   overflow: auto;
 
+  a {
+    color: map-get($app-primary, default);
+  }
+
   h1, h2, h3, h4 {
     font-size: 1.3rem !important;
     margin-bottom: 0 !important;
